jquery-hide-visible-before-fix

--- a/app/css/dashboard-style.less
+++ b/app/css/dashboard-style.less
@@ -21,6 +21,10 @@
   background-size: contain;
 }
 
+.hide{
+  display: none;
+}
+
 .dashboard {
   display: flex;
   flex-wrap: wrap;
